--- a/src/theme/main.scss
+++ b/src/theme/main.scss
@@ -1,38 +1,11 @@
 body {
   margin: 0;
   padding: 0;
-  text-align: left;
+  background: #696969;
 }
 
 div.page-container {
   padding: 20px;
-}
-
-.lineThrough
-{
-	text-decoration: line-through;
-	float: right;
-}
-
-.green
-{
-	color: green;
-}
-
-hr 
-{
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: auto;
-    padding: 0;
-}
-
-h1
-{
-	text-align: center;
-	vertical-align: text-top;
 }
 
 @import "./components/navigation/MainHeader.scss";
