Added final, location and profileImage pages

--- a/src/theme/main.scss
+++ b/src/theme/main.scss
@@ -40,4 +40,7 @@ h1
 
 @import "./pages/Home/HomePage.scss";
 @import "./pages/Registration/RegistrationPage.scss";
-@import "./pages/Payment/PaymentPage.scss"
+@import "./pages/Payment/PaymentPage.scss";
+@import "./pages/ProfileImage/ProfileImagePage.scss";
+@import "./pages/Location/LocationPage.scss";
+@import "./pages/Final/FinalPage.scss";
