updating recent work

--- a/src/theme/main.scss
+++ b/src/theme/main.scss
@@ -30,6 +30,69 @@ img{
   margin-right:auto;
 }
 
+.image-container{
+  display: center;
+  align:center;   
+  display:block; 
+  margin-left: auto;
+  margin-right:auto;
+}
+.buttonStyle{
+  background-color: #E9E585;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-left:30%;
+  boarder-radius:15px;
+  width:30%;
+  border-radius:20px;
+}
+
+.buttonStyle2{
+    background-color: #9D8D8F;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-left:30%;
+  boarder-radius:15px;
+  width:30%;
+  border-radius:20px;
+}
+
+.buttonStyle3{
+  background-color: #008CBA; /* Blue */
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-left:30%;
+  boarder-radius:15px;
+  width:30%;
+  border-radius:20px;
+}
+
+.buttonStyle4{
+   background-color: white;
+  color: red;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-left:30%;
+  boarder-radius:15px;
+  width:30%;
+  border-radius:20px;
+
+}
 @media (max-width: 1000px){
 
   img{
