--- a/src/theme/pages/Home/HomePage.scss
+++ b/src/theme/pages/Home/HomePage.scss
@@ -5,21 +5,20 @@
 .image-homepage
 {
 
-display: center;
-  align:center;   
-  display:block; 
-  margin-left: 70%;
-  margin-right:auto;
+display: right;
+ // align:center;   
+ // display:block; 
+  //margin-left: 70%;
+ // margin-right:auto;
 
 }
-.header
-{
+.header{
 
-display: center;
-  align:center;   
-  display:block; 
-  margin-left: auto;
-  margin-right:80%;
+display: left;
+  //align:center;   
+  //display:block; 
+  //margin-left: auto;
+  //margin-right:80%;
 
 
 
