updating buttons and pages

--- a/src/theme/main.scss
+++ b/src/theme/main.scss
@@ -40,12 +40,13 @@ img{
 .buttonStyle{
   background-color: #E9E585;
   color: white;
+  border: none;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  margin-left:30%;
+  margin-left:35%;
   boarder-radius:15px;
   width:30%;
   border-radius:20px;
@@ -54,12 +55,13 @@ img{
 .buttonStyle2{
     background-color: #9D8D8F;
   color: white;
+  border:none;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  margin-left:30%;
+  margin-left:35%;
   boarder-radius:15px;
   width:30%;
   border-radius:20px;
@@ -68,12 +70,13 @@ img{
 .buttonStyle3{
   background-color: #008CBA; /* Blue */
   color: white;
+  border: none;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  margin-left:30%;
+  margin-left:35%;
   boarder-radius:15px;
   width:30%;
   border-radius:20px;
@@ -82,12 +85,13 @@ img{
 .buttonStyle4{
    background-color: white;
   color: red;
+  border: none;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  margin-left:30%;
+  margin-left:35%;
   boarder-radius:15px;
   width:30%;
   border-radius:20px;
