--- a/src/theme/pages/Home/HomePage.scss
+++ b/src/theme/pages/Home/HomePage.scss
@@ -20,7 +20,46 @@ display: left;
   //margin-left: auto;
   //margin-right:80%;
 
+}
 
+.buttonStyleHome{
+ //background-color: #E9E585;
+ // border: none;
+  //color: white;
+  //padding: 20px;
+  //text-align: center;
+  //text-decoration: none;
+  //display: inline-block;
+  //font-size: 16px;
+  //margin: 4px 2px;
+  //border-radius:50%;
+  //margin-left:30px;
+}
 
-
+.buttonStyleHome2{
+ background-color:#E9E585;
+  //border: none;
+  //color: white;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  border-radius:50%;
+  margin-left: 60%;
+}
+.test{
+	
+	 background-color: #E9E585;
+  border: none;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  border-radius:50%;
+  margin-left:30px;
 }
