--- a/src/theme/pages/Sign up/signUp.scss
+++ b/src/theme/pages/Sign up/signUp.scss
@@ -1,7 +1,3 @@
-#PaymentPage {
-	
-
-}
 img{
 	height:100%;
 	width:100;
@@ -32,3 +28,10 @@ hr
     margin: auto;
     padding: 0;
 }
+h1{
+	font-family: 'Russo One', sans-serif;
+	text-align: center;
+	vertical-align: text-top;
+  color: #E9E585;
+  size:10px;
+  }
