Made Terms and conditions page and css

--- a/app/Client/src/theme/main.scss
+++ b/app/Client/src/theme/main.scss
@@ -110,8 +110,6 @@ img{
 
 }
 
-
-
 @import "./components/navigation/MainHeader.scss";
 @import "./components/forms/form-control.scss";
 
@@ -121,3 +119,4 @@ img{
 @import "./pages/Location/LocationPage.scss";
 @import "./pages/Final/FinalPage.scss";
 @import "./pages/ProfileSetup/ProfileSetupPage.scss";
+@import "./pages/Registration/TCPage.scss";
