--- a/app/Client/src/theme/main.scss
+++ b/app/Client/src/theme/main.scss
@@ -161,6 +161,7 @@ img{
 .formBox2 {
   
   padding: 8px;
+  margin-top:20px;
   width:100%;
   border: none;
   border-radius:20px;
@@ -168,6 +169,7 @@ img{
 .formBox3 {
   
   padding: 8px;
+  margin-top:20px;
   width:100%;
   border: none;
   border-radius:20px;
