--- a/app/Client/src/theme/main.scss
+++ b/app/Client/src/theme/main.scss
@@ -10,6 +10,12 @@ div.page-container {
   padding: 20px;
 }
 
+a
+{
+  color:white;
+  text-decoration: none;
+}
+
 ul li
 {
     line-height: 0.8;
@@ -59,6 +65,23 @@ img{
   margin-left: auto;
   margin-right:auto;
 }
+
+.buttonStyleAlert{
+  background-color: #9D8D8F;
+  color: white;
+  border: none;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 12px;
+  boarder-radius:15px;
+  border-radius:15px;
+  margin-right: 10px;
+  right: 0;
+  position: absolute;
+}
+
+
 .buttonStyle{
   background-color: #E9E585;
   color: white;
