--- a/app/Client/src/theme/main.scss
+++ b/app/Client/src/theme/main.scss
@@ -174,6 +174,20 @@ img{
   border: none;
   border-radius:20px;
 }
+.age{
+   padding: 8px;
+  margin-top:20px;
+  border: none;
+  border-radius:20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  display: center;
+  align:center;   
+  display:block; 
+  margin-left: auto;
+  margin-right:auto;
+}
 
 @media (max-width: 1000px){
 
