--- a/Client/src/theme/main.scss
+++ b/Client/src/theme/main.scss
@@ -20,6 +20,7 @@ ul li
 {
     line-height: 0.8;
     list-style: none;
+    color:white;
 }
 
 ul li::before {
@@ -31,7 +32,11 @@ ul li::before {
   padding-right:8px;
   top: 8px;
   font-size: 40px;
+}
 
+.accessList
+{
+    list-style: none;
 }
 
 h1
@@ -232,6 +237,14 @@ img{
   margin-left: auto;
   margin-right:auto;
   width:40%;
+}
+.age3{
+  display: center;
+  align:center;   
+  display:block; 
+  margin-left: auto;
+  margin-right:auto;
+  
 }
 .container{
   
