--- a/Client/src/theme/pages/Registration/TCPage.scss
+++ b/Client/src/theme/pages/Registration/TCPage.scss
@@ -2,3 +2,9 @@
 	font-size: 11px;
 	font-family: Courier New,Courier,monospace; 
 }
+
+.TCH1
+{
+	font-size: 17px;
+	font-family: Courier New,Courier,monospace; 
+}
