--- a/Client/src/theme/pages/Home/HomePage.scss
+++ b/Client/src/theme/pages/Home/HomePage.scss
@@ -64,3 +64,113 @@ display: left;
   border-radius:50%;
   margin-left:30px;
 }
+
+.homePlacement{
+  background-colour:#55495e;
+  font-size: 14px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  display: center;
+  align:center;   
+  display:block; 
+  margin-left: auto;
+  margin-right:auto;
+  width:20%;
+
+
+
+}
+
+
+@media (min-width: 1000px){
+
+  img{
+ 
+  display: center;
+  align:center;   
+  display:block; 
+  margin-left: auto;
+  margin-right:auto;
+}
+.homePlacement{
+  background-colour:red;
+  font-size: 14px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  display: center;
+  align:center;   
+  display:block; 
+  margin-left: auto;
+  margin-right:auto;
+
+
+
+}
+body{
+   
+}
+}
+@media (max-width: 500px){
+
+  img{
+ 
+  display: center;
+  align:center;   
+  display:block; 
+  margin-left: auto;
+  margin-right:auto;
+}
+body{
+    
+}
+.homePlacement{
+ 
+  font-size: 14px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  display: center;
+  align:center;   
+  display:block; 
+  margin-left: auto;
+  margin-right:auto;
+  width:100%;
+
+
+
+}
+}
+@media (max-width: 450px){
+
+  
+body{
+    
+}
+.homePlacement{
+ 
+  font-size: 14px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  display: center;
+  align:center;   
+  display:block; 
+  margin-left: auto;
+  margin-right:auto;
+  width:100%;
+
+
+
+}
+
+.imageH{ 
+  display: center;
+  align:center;   
+  display:block; 
+  margin-left: auto;
+  margin-right:auto;
+  width:100%;
+}
+}
