--- a/Client/src/theme/main.scss
+++ b/Client/src/theme/main.scss
@@ -241,9 +241,11 @@ img{
 .age3{
   display: center;
   align:center;   
-  display:block; 
+  display:block;
+  display: inline;
   margin-left: auto;
   margin-right:auto;
+float: right;
   
 }
 .container{
